[package]
name = "mwe"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }

# Database
sqlx = { version = "0.7.2", features = ["runtime-tokio-rustls", "postgres", "migrate"] }

# Logging
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "time", "local-time"] }

